[gd_scene load_steps=10 format=3 uid="uid://b4yqvpxq8r2gy"]

[ext_resource type="Script" path="res://scripts/main_scene.gd" id="1_m4p2q"]
[ext_resource type="Environment" uid="uid://dxj5cdg8fount" path="res://default_env.tres" id="2_8k4vd"]
[ext_resource type="Script" path="res://scripts/character.gd" id="3_y5p2r"]
[ext_resource type="PackedScene" uid="uid://bbeikt4ey36ng" path="res://assets/biped/biped/Animation_Walking_withSkin.glb" id="4_w3p2s"]
[ext_resource type="PackedScene" uid="uid://b06xw1vjtiw14" path="res://assets/biped/biped/Animation_Running_withSkin.glb" id="5_x4p2t"]
[ext_resource type="PackedScene" uid="uid://dbiperaie8rfu" path="res://assets/biped/biped/Animation_Excited_Walk_F_withSkin.glb" id="6_y5p2u"]

[sub_resource type="SphereMesh" id="SphereMesh_q8p3r"]
radius = 20.0
height = 40.0

[sub_resource type="SphereShape3D" id="SphereShape3D_r8p3s"]
radius = 20.0

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_t8p3t"]
radius = 0.3
height = 1.8

[node name="MainScene" type="Node3D"]
script = ExtResource("1_m4p2q")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("2_8k4vd")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, -0.75, 0.433013, 0, 30, 0)
shadow_enabled = true

[node name="Planet" type="StaticBody3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Planet"]
mesh = SubResource("SphereMesh_q8p3r")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Planet"]
shape = SubResource("SphereShape3D_r8p3s")

[node name="Character" type="CharacterBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 21, 0)
script = ExtResource("3_y5p2r")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Character"]
shape = SubResource("CapsuleShape3D_t8p3t")

[node name="WalkingModel" type="Node3D" parent="Character"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, -1, 0)

[node name="Animation_Walking_withSkin" parent="Character/WalkingModel" instance=ExtResource("4_w3p2s")]

[node name="RunningModel" type="Node3D" parent="Character"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, -1, 0)

[node name="Animation_Running_withSkin" parent="Character/RunningModel" instance=ExtResource("5_x4p2t")]

[node name="DancingModel" type="Node3D" parent="Character"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, -1, 0)

[node name="Animation_Excited_Walk_F_withSkin" parent="Character/DancingModel" instance=ExtResource("6_y5p2u")]

[node name="CameraMount" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 21, 0)

[node name="Camera3D" type="Camera3D" parent="CameraMount"]
transform = Transform3D(1, 0, 0, 0, 0.939693, 0.34202, 0, -0.34202, 0.939693, 0, 5, 8)
